# ChangeLog for app-emacs/bongo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2008; Ulrich Mueller <ulm@gentoo.org> bongo-20070619.ebuild:
  Add dependency on app-emacs/volume.

*bongo-20070619 (22 Jun 2008)

  22 Jun 2008; Ulrich Mueller <ulm@gentoo.org> +files/50bongo-gentoo.el,
  +files/bongo-20070619-fix-require.patch, +metadata.xml,
  +bongo-20070619.ebuild:
  Initial import, bug 228723. Ebuild contributed by me.
