@@ -1,6 +1,6 @@
 AUX 50bongo-gentoo.el 193 RMD160 2f2df265a712a2955d95c6b6a9f9c8d0e75345bc SHA1 db2b13cb5a6dda0df9c5552ddcf742a17bd4ae8a SHA256 268d57ad3d84870af45d87c1a060df2a5e06b11127d24b140a41614e6be4866e
 AUX bongo-20070619-fix-require.patch 224 RMD160 e4a1ce68d5fc982251d9bbbaa1d2aed417c20ece SHA1 0badaea162b26bfd54cd5d72de73e4417b033c1a SHA256 3570a83fa4c77e99f761475937587e4d0485661896adc79159fdebd44a04a879
 DIST bongo-20070619.tar.bz2 97341 RMD160 84fbc62b64541b2d19ab0100a944ef6d2dab98d8 SHA1 59a84838ea6550f6b128b3e84dacd6c9ce3d57ef SHA256 a4758e6f60e32f90aa0416c5f5a522dc8edb131ce4aa76212b542b941e12a4d8
-EBUILD bongo-20070619.ebuild 1089 RMD160 aaa9c214424421b28c16d2060ad4510c2a1707a0 SHA1 e2d018ad09aaf1d91204de23c5c7fcfe10be350c SHA256 854689de0d6e9a481754a6300137efeb3a25765265e172a20894907d2f9c0daf
-MISC ChangeLog 470 RMD160 f950c606d6a1b42bfbfce9d0b866a986990238ff SHA1 8796548faa48c58f43cf8149a5493cb9e66afe12 SHA256 cc51af2d8e6ecafa6b5502eea48a04f72b9449a2813886f8e61c78119f060f6e
+EBUILD bongo-20070619.ebuild 1321 RMD160 17fde665299485b3919682cf7ffb5c7b4986d2d0 SHA1 4fc0fd52ea520b55e3506eff53ec4a9cd77be5e0 SHA256 d4615e0e21351129d6a29f73393222b7b42028a485392cb504e1f32d5e3b002e
+MISC ChangeLog 609 RMD160 f6edbbb2cf185923459ec8404f6682f1537bf8ca SHA1 3ab2bc8b0606c4f251595371b9ab1d1505e1684a SHA256 34c8af4782df0f21f738d0c45183ac5fc4116e52b1a87a0f829242bba6c9a8a3
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
