@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Jun 2008; Ulrich Mueller <ulm@gentoo.org> bongo-20070619.ebuild:
+  Install tree-from-tags.rb in doc. Add a note about media players.
+
   22 Jun 2008; Ulrich Mueller <ulm@gentoo.org> bongo-20070619.ebuild:
   Add dependency on app-emacs/volume.
 
